# vocat

./: .gitignore  .gitmodules  CLAUDE.md
.cursor/: hooks.json
.cursor/rules/: claude-mem-context.mdc
apps/brookesia_app_settings/: esp_brookesia_app_settings_manager.cpp
docs/: meeting_assistant_app.md  pitfalls.md
docs/superpowers/plans/: 2026-03-29-rtc-meeting-demo.md  2026-04-01-tts-audio-fix.md  2026-04-01-ws-meeting-demo.md  rtc_meeting_demo_implementation.md
docs/superpowers/specs/: 2026-04-01-ws-meeting-demo-design.md
products/meeting_demo/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.local.example
products/meeting_demo/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  pipeline_gmf.c  pipeline_gmf.h  ui_meeting.c  ui_meeting.h  volc_rtc_session.c  volc_rtc_session.h  wifi_init.c
products/meeting_demo/tools/: build.sh
products/rtc_meeting_demo/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.local.example
products/rtc_meeting_demo/components/volc_rtc_engine_lite/: CMakeLists.txt  idf_component.yml
products/rtc_meeting_demo/main/: CMakeLists.txt  Kconfig.projbuild  bot_client.c  bot_client.h  idf_component.yml  main.c  pipeline_gmf.c  pipeline_gmf.h  rtc_session.c  rtc_session.h  ui_meeting.c  ui_meeting.h  wifi_init.c
products/rtc_meeting_demo/server/: README.md  RtcAigcConfig.py  (+2 more)
products/speaker/: sdkconfig.defaults
products/ws_meeting_demo/: CMakeLists.txt  EVAL_RESULTS.md  auto_flash.py  crawler.md  partitions.csv  sdkconfig.defaults  sdkconfig.local
products/ws_meeting_demo/main/: CMakeLists.txt  Kconfig.projbuild  api_client.c  api_client.h  host_ws.c  host_ws.h  idf_component.yml  main.c  mp3_player.c  mp3_player.h  pipeline_ws.c  pipeline_ws.h  project_include.cmake  transcribe_ws.c  transcribe_ws.h  ui_meeting.c  ui_meeting.h  vad.c  vad.h  wifi_init.c  wifi_init.h  ws_session.c  ws_session.h  xmos_ctrl.c  xmos_ctrl.h
products/ws_meeting_demo/main/assets/: clare_avatar.rgb565a8
(+15 files in other folders)
